--- a/demo/animate.css/animate.css
+++ b/demo/animate.css/animate.css
@@ -1,23 +1,3 @@
-body{
-  font-family: 'Microsoft YaHei', 'Courier New', Courier, monospace;
-}
-#animate{
-  position: absolute;
-  width: 400px;
-  height: 200px;
-  line-height: 200px;
-  text-align: center;
-  left: 35%;
-  top: 25%;
-  font-size: 40px;
-  cursor: pointer;
-}
-#sel{
-  position: absolute;
-  left: 40%;
-  bottom: 2%;
-}
-
 /*******************************************/
 /**************** animate.css **************/
 /*******************************************/
@@ -136,12 +116,113 @@ body{
 @keyframes bounceOut{
   20%{ transform: scale(.6); }
   40%{ transform: scale(1); }
-  50%{ opacity: 0; transform: scale(.1); }
+  100%{ opacity: 0; transform: scale(.1); }
 }
 
 @keyframes bounceOutDown{
-  15%{ transform: translateY(20px);}
-  30%{ transform: translateY(0px); }
-  50%{ transform: translateY(55vh); }
-  100%{ opacity: 0; transform: translateY(0px); }
+  30%{ transform: translateY(30px);}
+  60%{ transform: translateY(0px); }
+  100%{ transform: translateY(55vh); opacity: 0; }
+}
+
+@keyframes bounceOutLeft{
+  60%{ transform: translateX(30px); }
+  100%{ transform: translateX(-60vw)}
+}
+
+@keyframes bounceOutRight{
+  60%{ transform: translateX(-30px); }
+  100%{ transform: translate(60vw); }
+}
+
+@keyframes bounceOutUp{
+  20%{ transform: translateY(-30px); }
+  40%{ transform: translateY(0px); }
+  100%{ transform: translateY(-55vh); opacity: 0;}
+}
+
+@keyframes fadeIn{
+  80%{ opacity: 0; }
+}
+
+@keyframes fadeInDown{
+  0%,70%{ opacity: 0; transform: translateY(-100px); }
+  100%{ transform: translateY(0px); }
+}
+
+@keyframes fadeInDownBig{
+  0%,70%{ opacity: 0; transform: translateY(-55vh); }
+  100%{ transform: translateY(0px); }
+}
+
+@keyframes fadeInLeft{
+  0%,70%{ transform: translateX(-200px); opacity: 0;}
+  100%{ transform: translateX(0px); }
+}
+
+@keyframes fadeInLeftBig{
+  0%, 70%{ transform: translateX(-60vw); opacity: 0; }
+  100%{ transform: translateX(0px); }
+}
+
+@keyframes fadeInRight{
+  0%,70%{ transform: translateX(200px); opacity: 0; }
+  100%{ transform: translateX(0px); }
+}
+
+@keyframes fadeInRightBig{
+  0%,70%{ transform: translateX(60vw); opacity: 0; }
+  100%{ transform: translateX(0px); }
+}
+
+@keyframes fadeInUp{
+  0%,70%{ transform: translateY(100px); opacity: 0; }
+  100%{ transform: translateY(0px); }
+}
+@keyframes fadeInUpBig{
+  0%,70%{ transform: translateY(55vh); opacity: 0; }
+  100%{ transform: translateY(0px); }
+}
+
+@keyframes flip{
+  0%,100%{ transform: rotateY(360deg); }
+  40%,60%{ transform: rotateY(180deg); }
+}
+
+@keyframes flipInX{
+  0%{ transform: rotateX(90deg); opacity: 0; }
+  60%{ transform: rotateX(-20deg); opacity: 1; }
+  90%{ transform: rotateX(20deg); opacity: 1; }
+  100%{ transform: rotateX(0deg); opacity: 1; }
+}
+
+@keyframes flipInY{
+  0%{ transform: rotateY(90deg); opacity: 0; }
+  60%{ transform: rotateY(-20deg); opacity: 1; }
+  90%{ transform: rotateY(20deg); opacity: 1; }
+  100%{ transform: rotateY(0deg); opacity: 1; }
+}
+
+/* flipOutX and flipOutY not finished */
+@keyframes flipOutX{
+  40%{ transform: rotateX(-30deg); opacity: 1;}
+  100%{ transform: rotateX(100deg); opacity: 0; }
+}
+
+@keyframes flipOutY{
+  25%{ transform: rotateY(-30deg); opacity: 1; }
+  50%{ transform: rotateY(0deg); opacity: 1; }
+  100%{ transform: rotateY(-100deg); opacity: 0; }
+}
+
+@keyframes lightSpeedIn{
+  0%{ transform: translateX(300px) skewX(30deg); opacity: 0; }
+  30%{ transform: translateX(0px) skewX(-30deg); opacity: 1; }
+  60%{ transform: skewX(30deg); }
+  90%{ transform: skewX(-30deg); }
+  100%{ transform: skewX(0deg); }
+}
+
+@keyframes lightSpeedOut{
+  100%{ transform: translateX(40vw) skewX(30deg); opacity: 0; }
 }
