--- a/demo/animate.css/animate.css
+++ b/demo/animate.css/animate.css
@@ -325,14 +325,51 @@
 }
 
 @keyframes zoomInDown{
-  0%{ transform: translateY(-250px) scale(.1); opacity: 0; }
-  70%{ transform: translateY(-300px) scale(.3); opacity: .1; }
-  90%{ transform: translateY(0px) scale(.8); }
+  0%,40%{ transform: translateY(-300px) scale(.1); opacity: 0; }
+  90%{ transform: translateY(0px) scale(.5); opacity: 1; }
+  100%{ transform: scale(1); }
+}
+
+@keyframes zoomInLeft{
+  0%,40%{ transform: translateX(-300px) scale(.1); opacity: 0; }
+  90%{ transform: translateX(0px) scale(.5); opacity: 1; }
+  100%{ transform: scale(1); }
+}
+
+@keyframes zoomInRight{
+  0%,40%{ transform: translateX(300px) scale(.1); opacity: 0; }
+  90%{ transform: translateX(0px) scale(.5); opacity: 1; }
+  100%{ transform: scale(1); }
+}
+
+@keyframes zoomInUp{
+  0%,40%{ transform: translateY(300px) scale(.1); opacity: 0; }
+  90%{ transform: translateY(0px) scale(.5); opacity: 1; }
   100%{ transform: scale(1); }
 }
 
 @keyframes zoomOut{
   100%{ transform: scale(.1); opacity: 0; }
+}
+
+@keyframes zoomOutDown{
+  30%,50%{ transform: scale(.4); opacity: .5; }
+  100%{ transform: translateY(300px) scale(.1); opacity: 0; }
+}
+
+@keyframes zoomOutLeft{
+  30%,50%{ transform: scale(.4); opacity: .5; }
+  100%{ transform: translateX(-300px) scale(.1); opacity: 0; }
+}
+
+@keyframes zoomOutRight{
+  30%,50%{ transform: scale(.4); opacity: .5; }
+  100%{ transform: translateX(300px) scale(.1); opacity: 0; }
+}
+
+@keyframes zoomOutUp{
+  30%,50%{ transform: scale(.4); opacity: .5; }
+  100%{ transform: translateY(-300px) scale(.1); opacity: 0; }
 }
 
 @keyframes hinge{
