--- a/demo/music_player_web/style.css
+++ b/demo/music_player_web/style.css
@@ -79,6 +79,10 @@
 #list div .artistName{width: 201px; text-indent: 5px;}
 #list div .albumName{width: 231px; text-indent: 5px;}
 #list div .songDuration{width: 46px; text-indent: 5px;}
+#list div .songOperation:hover{
+    color: gray;
+    cursor: pointer;
+}
 #list div .artistName:hover{
     cursor: pointer;
     color: rgb(24, 135, 187);
@@ -108,10 +112,10 @@
     border-radius: 5px;
     cursor: pointer;
 }
-#pages{
+#pagination{
     min-width: 25px;
 }
-#pages > span{
+#pagination div > span{
     position: relative;
     top: -2px;
     display: inline-block;
@@ -123,7 +127,7 @@
     text-align: center;
     cursor: pointer;
 }
-#pages > span:hover{
+#pagination div > span:hover{
     background: lightblue;
 }
 .search input{
@@ -138,9 +142,12 @@
 }
 .search span{
     position: relative;
-    top: -5px;
+    top: -10px;
     left: 277px;
     cursor: pointer;
+}
+.search span:hover{
+    color: gray;
 }
 #controlWrap > audio{
     position: relative;
@@ -148,6 +155,10 @@
     width: 598px;
     left: 1px;
     background: #f1f3f4;
+}
+#albumPic img{
+    width: 300px;
+    height: 300px;
 }
 #lyric{
     overflow-y: scroll;
