--- a/demo/windows_10_calculator/style.css
+++ b/demo/windows_10_calculator/style.css
@@ -1,7 +1,8 @@
 #container {
   position: relative;
   min-width: 400px;
-  height: 650px;
+  max-width: 1000px;
+  height: 700px;
   border: 1px solid lightgray;
   font-family: 'Microsoft YaHei', 'Courier New', Courier, monospace;
   overflow: hidden;
@@ -12,9 +13,8 @@
   width: 100%;
   height: 50px;
   padding-right: 30px;
-  background: lightgray;
+  background-color: lightgray;
 }
-
 #top-title>div {
   float: left;
   min-width: 50px;
@@ -23,18 +23,82 @@
   text-align: center;
   cursor: default;
 }
+.title{
+  width: 530px;
+  font-weight: 800;
+}
+.history-wrap{
+  position: absolute;
+  left: 600px;
+  width: 400px;
+  height: 650px;
+  background-color: lightcoral;
+  overflow-y: scroll;
+}
+.history::before{
+  position: absolute;
+  top: 40px;
+  left: 629px;
+  content: '';
+  width: 58px;
+  height: 3px;
+  background: lightseagreen;
+}
+.history-item{
+  width: 100%;
+  height: 80px;
+  border-bottom: 1px solid gray;
+}
+.history-input{
+  width: 100%;
+  height: 30px;
+  font-size: 22px;
+}
+.history-input span{
+  float: right;
+}
+.history-result{
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  font-size: 30px;
+  text-align: right;
+}
+.history-fnum,
+.history-snum{
+  min-width: 10%;
+  padding-left: 3px;
+  padding-right: 3px;
+  text-align: center;
+}
+.history-delete{
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  left: 943px;
+  top: 610px;
+}
+.history-delete i{
+  position: absolute;
+  top: 15px;
+  left: 15px;
+}
+.history-delete:hover{
+  background: lightblue;
+}
+
 .show-hide{
   width: 100px;
 }
-.show-hide span{
-  position: relative;
-  left: -20px;
+.show-hide i{
+  position: absolute;
   display: inline-block;
-  width: 70px;
-  text-align: center;
+  left: 0px;
+  width: 50px;
+  height: 50px;
 }
-.show-hide span:hover{
-background: lightseagreen;
+.show-hide i:hover{
+background-color: lightseagreen;
 }
 
 #slider {
@@ -42,9 +106,10 @@ background: lightseagreen;
   left: -200px;
   top: 0px;
   width: 200px;
-  height: 600px;
-  background: lightblue;
+  height: 650px;
+  background-color: lightseagreen;
   z-index: 9;
+  overflow-y: scroll;
 }
 
 .slider-ul {
@@ -55,92 +120,134 @@ background: lightseagreen;
 .slider-ul div{
   font-size: 25px;
   text-indent: 10px;
+  margin-top: 15px;
 }
 .slider-ul li{
   text-indent: 10px;
-  height: 35px;
-  line-height: 35px;
+  height: 40px;
+  line-height: 40px;
   cursor: default;
 }
 .slider-ul li:hover{
-  background: lightgray;
+  background-color: lightgray;
 }
 
-#calc-wrap {
+#calc-wrap{
   position: absolute;
   top: 50px;
-  left: 0px;
-  width: 400px;
-  height: 600px;
+  width: 1000px;
+  height: 650px;
 }
-
-#standard {
+#calc-wrap > div{
   position: absolute;
-  width: 400px;
-  height: 600px;
-  background: lightcoral;
+  width: 1000px;
+  height: 650px;
+  display: none;
 }
-
-#standard .display {
-  width: 400px;
+.input-wrap{
+  position: absolute;
+  width: 600px;
+  height: 650px;
+  background-color: lightblue;
 }
-
-#standard section {
-  float: left;
-  width: 100px;
-  height: 100px;
-  font-size: 20px;
-  text-align: center;
-  line-height: 100px;
-  border: 1px solid gray;
-  box-sizing: border-box;
-  cursor: default;
-}
-
-#standard .equal:hover {
-  background: lightgray;
-}
-
-#standard .display {
+.display{
+  width: 600px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 30px;
+  background-color: lightskyblue;
   text-align: right;
 }
+.st-input-panel section{
+  float: left;
+  width: 150px;
+  height: 120px;
+  font-size: 30px;
+  text-align: center;
+  line-height: 120px;
+  cursor: default;
+}
+.st-input-panel section:hover{
+  background-color: gray;
+}
 
-#scientific,
-#programmer,
-#volumn,
-#length,
-#weightandmass,
-#temperature,
-#energy,
-#area,
-#speed,
-#time,
-#power{
+.sc-input-panel section{
+  float: left;
+  width: 66.67px;
+  height: 120px;
+  line-height: 120px;
+  text-align: center;
+}
+.sc-input-panel section:hover{
+  background-color: gray;
+}
+
+.pr-translation-wrap{
+  width: 100%;
+  height: 90px;
+  background-color: lightcoral;
+}
+.pr-translation-switch{
+  height: 30px;
+  width: 100%;
+  background-color: lightgreen;
+}
+.pr-translation-switch span{
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+}
+.pr-translation-switch span:hover{
+  background-color: red;
+}
+.pr-input-panel{
+  width: 100%;
+  height: 480px;
+  background-color: lightseagreen;
+}
+.pr-input-panel > section{
   position: absolute;
-  width: 800px;
-  height: 600px;
-  display: none;
-  background: lightgreen;
+  width: 100%;
+  height: 480px;
 }
-
-.sc-display{
-  width: 800px;
-  height: 50px;
-  background: lightblue;
-}
-.sc-left,
-.sc-right{
-  float: left;
-  width: 400px;
-  height: 500px;
-}
-.sc-left section{
-  float: left;
-  width: 80px;
-  height: 80px;
-}
-.sc-right section{
+.pr-input-panel-first section{
   float: left;
   width: 100px;
-  height: 100px;
+  height: 80px;
+  text-align: center;
+  line-height: 80px;
 }
+.pr-input-panel-second{
+  display: none;
+}
+.pr-input-panel-second span{
+  display: inline-block;
+  width: 32px;
+  height: 120px;
+  line-height: 120px;
+  text-align: center;
+  cursor: default;
+}
+.pr-input-panel-second span:hover{
+  color: #fff;
+}
+.pr-input-panel-second span::before{
+  position: absolute;
+}
+.pr-input-panel-second span:nth-of-type(4)::before{ content: '60';top: 25px;}
+.pr-input-panel-second span:nth-of-type(8)::before{ content: '56';top: 25px;}
+.pr-input-panel-second span:nth-of-type(12)::before{ content: '52';top: 25px;}
+.pr-input-panel-second span:nth-of-type(16)::before{ content: '48';top: 25px;}
+.pr-input-panel-second span:nth-of-type(20)::before{ content: '44'; top: 145px;}
+.pr-input-panel-second span:nth-of-type(24)::before{ content: '40'; top: 145px;}
+.pr-input-panel-second span:nth-of-type(28)::before{ content: '36'; top: 145px;}
+.pr-input-panel-second span:nth-of-type(32)::before{ content: '32'; top: 145px;}
+.pr-input-panel-second span:nth-of-type(36)::before{ content: '28'; top: 265px;}
+.pr-input-panel-second span:nth-of-type(40)::before{ content: '24'; top: 265px;}
+.pr-input-panel-second span:nth-of-type(44)::before{ content: '20'; top: 265px;}
+.pr-input-panel-second span:nth-of-type(48)::before{ content: '16'; top: 265px;}
+.pr-input-panel-second span:nth-of-type(52)::before{ content: '12'; top: 385px;}
+.pr-input-panel-second span:nth-of-type(56)::before{ content: '8'; top: 385px;}
+.pr-input-panel-second span:nth-of-type(60)::before{ content: '4'; top: 385px;}
+.pr-input-panel-second span:nth-of-type(64)::before{ content: '0'; top: 385px;}
